# ManagerPasswords

./: README.md  docker-compose-dev.yaml  docker-compose-test.yaml
backend/: .env_test  Dockerfile_backend  Dockerfile_backend_test  JWT.py  alembic.ini  crypting.py  docker-compose-dev.yaml  main.py  pyproject.toml  pytest.ini  settings.py
backend/.github/workflows/: python-app.yml
backend/api/: base_schemas.py
backend/api/actions/: auth.py  passwords.py  users.py
backend/api/auth/: handlers.py  schemas.py
backend/api/passwords/: handlers.py  schemas.py
backend/api/users/: handlers.py  schemas.py
backend/db/passwords/: models.py  password_dal.py
backend/db/users/: models.py  user_dal.py
backend/migrations/: env.py
backend/migrations/versions/: 2023_11_24_0711-1d4d6e7c5350_alter_table_users.py  2023_11_27_1028-1d744b7e61ed_alter_table_passwords.py  2023_11_28_0836-9ba300fbd7ff_change_type_for_user_id.py  2023_11_28_1020-a0007628d1a0_alter_tables.py  2023_12_01_2124-98fa87a050c3_add_master_password_for_users.py  2023_12_01_2132-c4d0727b4947_add_master_password_for_users.py
backend/tests/: conftest.py  db_test.py
backend/tests/test_auth_api/: test_login_user_handler.py
backend/tests/test_password_dal/: test_create_password.py  test_delete_password.py  test_get_password.py  test_update_password.py
backend/tests/test_passwords_api/: test_create_or_update_password_handler.py  test_delete_password_handler.py  test_get_passwords_handler.py
backend/tests/test_user_dal/: test_create_user.py  test_get_user.py  test_update_user.py
(+6 files in other folders)
