[tool.poetry]
name = "managerpasswords"
version = "0.1.0"
description = "api for managing the passwords"
authors = ["LyaKakoyPC <LYAKAKOYXY@yandex.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.104.1"
uvicorn = {extras = ["standart"], version = "^0.24.0.post1"}
sqlalchemy = "^2.0.23"
envparse = "^0.2.0"
psycopg2-binary = "^2.9.9"
asyncpg = "^0.29.0"
alembic = "^1.12.1"
cryptography = "^41.0.5"
passlib = "^1.7.4"
python-jose = "^3.3.0"
bcrypt = "^4.0.1"


[tool.poetry.group.test.dependencies]
pytest = "^7.4.3"
pytest-asyncio = "^0.21.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
